# py-pc-components-scraper

./: .gitignore  Dockerfile  README.md  main.py  orchestrator.py  pyproject.toml  requirements.txt  test.py  worker.py
app/: orchestrator.py  test.py  worker.py
app/common/: aws.py  scraper.py  utils.py
app/orchestrator/: handler.py  test.py
app/worker/: handler.py
