[project]
name = "py-pc-components-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "boto3>=1.42.68",
    "loguru>=0.7.3",
    "pandas>=3.0.1",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "ruff>=0.15.6",
    "ty>=0.0.23",
]
